Option to add Spark Executor and Stage lines to GC graphs